<resources>
    <string name="app_name">Drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="dashboard">Dashboard</string>-->
    <string name="about">About</string>
    <string name="hello">Hello</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="sampleVal">Rs. 299</string>
    <string name="about_this_book">About this Book:</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <!--    <string name="profile">Profile</string>-->
    <!--    <string name="favorites">Favorites</string>-->
</resources>