<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/white"
    tools:context=".activity.DescriptionActivity">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:weightSum="6"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgDsImage"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher" />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3">
            <TextView
                android:id="@+id/txtDsBookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_book"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/txtDsBookAuthor"
                android:layout_below="@id/txtDsBookName"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_author"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/txtDsBookPrice"
                android:layout_below="@id/txtDsBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="8dp"
                android:text="@string/sampleVal"
                android:textColor="#357a38"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:drawableStart="@drawable/ic_rating"
            android:drawablePadding="4dp"
            android:padding="4dp"
            android:text="4.5"
            android:textColor="#ffca28"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/llContent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtDsScrollHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/about_this_book"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/txtDsDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/txtDsScrollHeading"
                android:text="@string/hello_blank_fragment"
                android:padding="5dp"/>
        </RelativeLayout>

    </ScrollView>
    <Button
        android:id="@+id/btnDsFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_to_favorites"
        android:textStyle="bold"/>
</RelativeLayout>