<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rclrItem"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="horizontal"
    android:background="@color/white"
    android:weightSum="6">

    <ImageView
        android:id="@+id/imgBookName"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_weight="1.5"
        android:padding="5dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.3">

        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/name_of_the_book"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookName"
            android:padding="8dp"
            android:textColor="@color/grey"
            android:text="@string/name_of_the_author"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookAuthor"
            android:layout_alignParentBottom="true"
            android:padding="8dp"
            android:text="@string/sampleVal"
            android:textColor="#357a38"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtBookRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:drawableLeft="@drawable/ic_rating"
        android:drawablePadding="4dp"
        android:padding="4dp"
        android:text="4.5"
        android:textColor="#ffca28"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>